--- a/package.json
+++ b/package.json
@@ -36,5 +36,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@playwright/test": "^1.32.1",
+    "jest": "^27.5.1"
   }
 }
