--- a/.github/workflows/flow.yml
+++ b/.github/workflows/flow.yml
@@ -16,10 +16,12 @@ jobs:
       - run: npm run build
   test-step:
     needs: build-step
+    runs-on: ubuntu-latest
     steps:
       - run: npm run test --watchAll
   e2e-step:
     needs: build-step test-step
+    runs-on: ubuntu-latest
     steps:
       - run: npm init playwright@latest
       - run: npx playwright test
