workflow merged again

--- a/.github/workflows/flow.yml
+++ b/.github/workflows/flow.yml
@@ -15,15 +15,15 @@ jobs:
           node-version: '16'
       - run: npm install
       - run: npm run build
-  test-step:
-    needs: build-step
-    runs-on: ubuntu-latest
-    steps:
+  # test-step:
+  #  needs: build-step
+  #  runs-on: ubuntu-latest
+  #  steps:
       - run: npm run test --watchAll
-  e2e-step:
-    needs: [build-step, test-step]
-    runs-on: ubuntu-latest
-    steps:
+  #e2e-step:
+  #  needs: [build-step, test-step]
+  #  runs-on: ubuntu-latest
+  #  steps:
       - run: npm init playwright@latest
       - run: npx serve -s build & npx playwright test
 
