--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,5 +1,5 @@
-name: main-pull-test
-run-name: Build & Test on pull
+name: push-deploy-workflow
+run-name: Build & Deploy to pages on push
 on: 
   push:
     branches:
