--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,7 +3,7 @@ run-name: Build & Test on pull
 on: 
   push:
     branches:
-      - main
+      - deploy
   workflow_dispatch:
 jobs:
   build-step:
