--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,6 +17,7 @@ jobs:
       - run: npm run build
   artifact-step:
     needs: build-step
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/upload-pages-artifact@v1.0.8
   deploy-step:
