--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,7 +17,7 @@ jobs:
       - run: npm run build
       - uses: actions/upload-pages-artifact@v1.0.8
   deploy-step:
-    needs: artifact-step
+    needs: build-step
     permissions:
       pages: write      # to deploy to Pages
       id-token: write   # to verify the deployment originates from an appropriate source
